Added background:cover to strech image to screen dimensions

--- a/common/app/assets/stylesheets/module/_adverts.less
+++ b/common/app/assets/stylesheets/module/_adverts.less
@@ -8,6 +8,7 @@ body {
 
     /* */
     background: url('/assets/john-lewis.cd3f187555b3f7cadb0c102fe23187ac.jpeg') no-repeat center center fixed;
+    background-size: cover;
 }
 
 
