--- a/common/app/assets/stylesheets/theme/_type.less
+++ b/common/app/assets/stylesheets/theme/_type.less
@@ -1,7 +1,7 @@
 // Article headline
 .type-1 {
 	font-family: @serif;
-	font-weight: bold;
+	font-weight: 900;
 	font-size: 22px;
 	line-height: 1.4em;
 }
